Various Java cleanups
- remove unused code
- fix non constant log parameters
- use Kafka's Admin instead of AdminClient
- fix a few typos

Signed-off-by: Mickael Maison <mickael.maison@gmail.com>