@@ -8,7 +8,6 @@ import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
 import java.io.IOException;
-import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
@@ -47,7 +46,7 @@ public class FileBasedTokenProvider implements TokenProvider {
     @Override
     public String token() {
         try {
-            return new String(Files.readAllBytes(filePath), StandardCharsets.UTF_8);
+            return Files.readString(filePath);
         } catch (IOException e) {
             throw new IllegalStateException(e);
         }
